# GALS

./: .gitignore  CMakeLists.txt  LICENCE  README.md  Uwagi  aliases.sh  package.xml
RTKLIB/: CMakeLists.txt
RTKLIB/src/: ephemeris.c  pntpos.c  pntpos.cpp  postpos.c  rinex.c  rtkcmn.c  rtklib.h  rtkpos.c
dataset/: .~lock.groundTruth_TST.csv#
dataset/UrbanNav/2019-04-28/: Uwagi.txt  reference.csv
dataset/UrbanNav/2020-03-14/: Uwagi.txt  gt_from_bag.csv  gt_from_bag.py  results.pos
dataset/UrbanNav/Tokyo/Odaiba/: .~lock.reference.csv#  aft_mapped_to_init_trajectory.txt  aft_mapped_to_init_trajectory_gps_planeLOAM.txt  aft_mapped_to_init_trajectory_gps_time.txt  aft_mapped_to_init_trajectory_planeLOAM.txt  reference.csv  results.pos  results.pos.stat  results.pos.trace
dataset/UrbanNav/Tokyo/Shinjuku/: aft_mapped_to_init_trajectory.txt  aft_mapped_to_init_trajectory_gps_time.txt
dataset/UrbanNav/UrbanNav-HK-Medium-Urban-1/: aft_mapped_to_init_trajectory2.txt  aft_mapped_to_init_trajectory_gps_time2.txt
dataset/UrbanNav/UrbanNav-HK-Medium-Urban-1/obs/: 20210517.light-urban.tste.google.pixel4.nmea  20210517.light-urban.tste.google.pixel4.obs  20210517.light-urban.tste.huawei.p40pro.nmea  20210517.light-urban.tste.huawei.p40pro.obs  20210517.light-urban.tste.novatel.flexpak6.obs  20210517.light-urban.tste.samsung.note8.nmea  20210517.light-urban.tste.samsung.note8.obs  20210517.light-urban.tste.ublox.f9p.nmea  20210517.light-urban.tste.ublox.f9p.splitter.nmea  20210517.light-urban.tste.ublox.f9p.splitter.obs  20210517.light-urban.tste.ublox.m8t.GC.nmea  20210517.light-urban.tste.ublox.m8t.GEJ.nmea  20210517.light-urban.tste.ublox.m8t.GEJ.obs  20210517.light-urban.tste.ublox.m8t.GR.nmea  20210517.light-urban.tste.ublox.m8t.GR.obs  20210517.light-urban.tste.xiaomi.mi8.nmea  20210517.light-urban.tste.xiaomi.mi8.obs
dataset/UrbanNav/UrbanNav-HK-Medium-Urban-1/r3_1s_1h_hkqt137c.2021/: hkqt137c.21c  hkqt137c.21g  hkqt137c.21l  hkqt137c.21n  hkqt137c.21q
dataset/UrbanNav/UrbanNav-HK-Mongkok/: hk_mongkok_ecef.tum  hk_mongkok_utm.tum  mapping.txt  mapping_gps_time.txt
dataset/UrbanNav/UrbanNav-HK-Mongkok/obs/: 20210518.dense-urban.mk.huawei.p40pro.obs  20210518.dense-urban.mk.novatel.flexpak6.obs  20210518.dense-urban.mk.samsung.note8.obs  20210518.dense-urban.mk.ublox.m8t.GC.obs  20210518.dense-urban.mk.ublox.m8t.GEJ.nmea  20210518.dense-urban.mk.ublox.m8t.GEJ.obs  20210518.dense-urban.mk.ublox.m8t.GRJ.nmea  20210518.dense-urban.mk.ublox.m8t.GRJ.obs  20210518.dense-urban.mk.xiaomi.mi8.nmea  20210518.dense-urban.mk.xiaomi.mi8.obs
dataset/UrbanNav/UrbanNav-HK-Mongkok/r3_1s_1h_hkqt138d.2021/: hkqt138d.21c  hkqt138d.21g  hkqt138d.21l  hkqt138d.21n  hkqt138d.21q
dataset/UrbanNav/UrbanNav-HK-Mongkok/r3_1s_1h_hkqt138e.2021/: hkqt138e.21c  hkqt138e.21g  hkqt138e.21l  hkqt138e.21n  hkqt138e.21q
dataset/UrbanNav/UrbanNav-HK-Whampoa-Deep-Urban/: aft_mapped_to_init_trajectory.txt  aft_mapped_to_init_trajectory_gps_time.txt
dataset/UrbanNav/UrbanNav-HK-Whampoa-Deep-Urban/obs/: 20210521.medium-urban.whampoa.google.pixel4.nmea  20210521.medium-urban.whampoa.google.pixel4.obs  20210521.medium-urban.whampoa.huawei.p40pro.obs  20210521.medium-urban.whampoa.novatel.flexpak6.obs  20210521.medium-urban.whampoa.samsung.note8.nmea  20210521.medium-urban.whampoa.samsung.note8.obs  20210521.medium-urban.whampoa.ublox.f9p.splitter.nmea  20210521.medium-urban.whampoa.ublox.m8t.GC.nmea  20210521.medium-urban.whampoa.ublox.m8t.GEJ.nmea  20210521.medium-urban.whampoa.ublox.m8t.GEJ.obs  20210521.medium-urban.whampoa.ublox.m8t.GRJ.nmea  20210521.medium-urban.whampoa.ublox.m8t.GRJ.obs  20210521.medium-urban.whampoa.xiaomi.mi8.nmea  20210521.medium-urban.whampoa.xiaomi.mi8.obs
dataset/UrbanNav/UrbanNav-HK-Whampoa-Deep-Urban/r3_1s_1h_hkqt141g.2021/: hkqt141g.21c  hkqt141g.21g  hkqt141g.21l  hkqt141g.21n  hkqt141g.21q
dataset/gps_solution_TST/: results.pos  rtklibResult_n.pos
dataset/gps_solution_TST/different/: INFO.txt
dataset/gps_solution_TST/obs,b,n/: obs,n.pos  rtklibResult.pos
dataset/gps_solution_TST/org/: rtklibResult.pos
dataset/gps_solution_TST2/: Uwagi.txt  results.pos
eval_script/: eval_optim.py
evaluation/: README.md  convertTimeStampToGPS.ipynb  evaluation.ipynb  evaluationHongKong.ipynb  evaluationTokyo.ipynb  piotrowo.ipynb  process_g2o.ipynb  process_g2o_pseudo_test.ipynb  requirements.txt
include/my_g2o/: BiasDriftEdge.h  BiasDriftVertex.h  BiasVertex.h  DistanceEdge.h  DopplerEdge.h  GPSEdge.h  GPSEdgePrior.h  myOptimization.h  myParameters.h  my_g2o.h  my_types.h
launch/: gals.launch  raw_gnss_rtklib.launch
script_eval/: eval_optim.py
src/: GPSEdge.cpp  gals.cpp  my_g2o.cpp  raw_gnss_rtklib.cpp
src/my_g2o/: BiasDriftEdge.cpp  BiasDriftVertex.cpp  BiasVertex.cpp  DistanceEdge.cpp  DopplerEdge.cpp  GPSEdge.cpp  GPSEdgePrior.cpp  myOptimization.cpp  my_types.cpp
